--- a/journal/202105.md
+++ b/journal/202105.md
@@ -306,9 +306,9 @@ See Politeia Digest [issue {}]({}) and [issue {}]({}) for more details on the mo
 
 { section hint: use the same `zoom` parameter for all dcrdata links }
 
-**Hashrate**: May's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) {set zoom to show the month} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: May's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) opened at ~418.2 Ph/s and closed ~351.7 Ph/s, bottoming at 233.8 Ph/s and peaking at 497.3 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jun 1: Poolin 38.75%, F2Pool 16.5%, Antpool 3.28%, BTC.com 1.56%, Luxor 1.29%, Huobipool 0.36%, UUPool 0.097%, Coinmine 0.0448%, okex 0.009%, Other 38%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
