--- a/journal/202105.md
+++ b/journal/202105.md
@@ -316,7 +316,7 @@ Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/dec
 
 **Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=ko2vefoc-kpf16yhd&bin=window&axis=time&visibility=true-true) varied between 173.3-198.1 DCR, with 30-day [average](https://dcrstats.com/) at 183.66 DCR (-2.14).
 
-The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) in proof-of-stake.
+The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) was 7.39-7.62 million DCR, meaning that 57.2-58.7% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) in proof-of-stake.
 
 { recap of ticket price action if it was interesting }
 
