--- a/journal/202105.md
+++ b/journal/202105.md
@@ -290,17 +290,15 @@ Community stats as of {date}:
 
 { we need to revise how we report to cover both legacy and new Treasury. maybe just sum them for a start? }
 
-In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using May's average of ${n.nn}, this is ${n} received and ${n} spent. At April's average rate of $198.60, the USD billed for past work is ${n}. As of {date}, Treasury balance is {n} DCR ({n} million USD at ${n.nn}).
+In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 11,342 DCR (2,564 to the old address, and 8,778 to the new system) and spent 698 DCR from the legacy address (on Jun 2). Using May's average of $173.47, this is $1.97M received and $121K spent. At April's average rate of $198.60, the USD billed for past work is $139K. As of Jun 3, combined Treasury balance is 683,438 DCR (107 million USD at $156).
 
-{ high level recap of decision-making activity and most important events }
+May saw 1 proposal submitted and approved, the proposal for continued development of Politeia (detailed last month) had 98.4% approval and turnout of 44%.
 
-{ cover how first tspend was voted on }
-
-- {}
+The first test of the new Tspend Treasury [transactions](https://explorer.dcrdata.org/tx/7507bcc72bfde895065034e12e6d462f2360163cd0c879f0db35514f9456b2c1), as enabled by DCP0006, was [drafted](https://twitter.com/behindtext/status/1392505872119705609) on May 12, and on May 22 was included in block 556,416 after having accumulated 6,755 Yes votes, and 1 No vote. 
 
 { check https://github.com/decredcommunity/proposals/commits/master for updates }
 
-See Politeia Digest [issue {}]({}) and [issue {}]({}) for more details on the month's proposals.
+See Politeia Digest [issue 42](https://blockcommons.red/politeia-digest/issue042/) for more details on the month's proposal.
 
 ## Network
 
