add some rel ext

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -446,6 +446,20 @@ Taproot activation saga
 
 { governance, funding, chain forks, community splits }
 
+Iran's Central Bank has [reportedly](https://www.coindesk.com/iran-central-bank-ban-trading-crypto-mined-abroad) banned trading of cryptocurrency which is "mined abroad", in an effort to stop capital flight. Iranian businesses are still permitted to obtain cryptocurrency from registered Iranian miners, for use in international payments.
+
+Bitcoin mining pool Marathon Mining has [mined](https://www.coindesk.com/marathon-miners-censor-bitcoin-transactions-ofac-compliant) a block which it describes as “fully compliant with U.S. regulations”, having censored transactions from entities it believes are sanctioned by the US Department of Treasury or have been involved in dark web activity. Despite their efforts some darknet market transactions made it into this block which was intended as a milestone for Bitcoin censorship.
+
+After Elon Musk criticized Bitcoin's environmental characteristics and Tesla [stopped](https://twitter.com/elonmusk/status/1392602041025843203) accepting it as payment, he joined with Michael Saylor and others to [promote](https://www.forbes.com/sites/ninabambysheva/2021/05/24/elon-musk-and-michael-saylor-lead-effort-by-bitcoin-miners-to-address-environmental-concerns/) a new "Bitcoin Mining Council to promote energy usage transparency and accelerate sustainability initiatives worldwide".
+
+Ark's Cathie Wood also [remarked](https://www.coindesk.com/ark-cathie-wood-crash-esg-movement) at Consensus that ESG (Environmental Social and Governance) concerns with Bitcoin meant “A lot of institutional buying went on pause”, crediting Elon Musk with a role in this movement.
+
+May's big Ethereum flash loan fail victim was xToken, where an attacker [exploited](https://www.theblockcrypto.com/post/104667/defi-protocol-xtoken-exploit-attack) bugs in two different contracts within the same transaction, netting a profit of $24.5 million after paying a $21,900 transaction fee to obtain the flash loan.
+
+Binance Smart Chain is now providing [competition](https://www.crowdfundinsider.com/2021/05/175611-defi-hack-analysis-project-pancakebunny-attacked-via-major-200-million-flash-loan-vulnerability/) for Ethereum in the DeFi dumpster fire stakes, after BUNNY tokens were hit for a notional $200 million in misprinted tokens following an economic exploit with, you guessed it, flash loans.
+
+Coinbase is [expanding](https://decrypt.co/72109/coinbase-says-its-a-media-company-really) its remit to also become a media company, going direct to their audience with "fact check" type content that is approved by its marketing department.
+
 { DEX }
 
 { relevant exchanges and websites }
