add some rel ext

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -436,6 +436,8 @@ https://twitter.com/lukebp_/status/1391747751105507331
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
 
+[Signalling](https://taproot.watch/) for Taproot activation on Bitcoin has hit a level exceeding 90% (as of early Jun at ~97%) and is set to be locked in some time in June when the current signalling window ends.
+
 Taproot activation saga
 
 - useful collection of Apr tweets https://twitter.com/_Checkmatey_/status/1382914885932044298
@@ -469,7 +471,7 @@ Coinbase is [expanding](https://decrypt.co/72109/coinbase-says-its-a-media-compa
 EU anti-encryption laws
 
 - https://mailbox.org/en/post/it-companies-warn-eu-plans-to-ban-encryption
-- please find what exactly is being restricted / came into effect recently {}
+- please find what exactly is being restricted / came into effect recently {rr: this doesn't appear to be a new story, when I search for it most of the stories in bigger outlets date to late 2020. Here is one that looks like a good report (with cake): https://techcrunch.com/2020/12/14/eu-council-wants-secure-encryption-and-lawful-data-access/ it seems like something more anti-encryption may be coming in 2021, but I don't see anything fresh and the mailbox.org article is just linking to this same EU document from 2020}
 
 That's all for May. Submit your stories [here](https://github.com/xaur/decred-news/labels/next%20release) or simply share your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#feedback). We're always looking for [contributors](https://github.com/xaur/decred-news/blob/docs/contributing.md) to improve DJ!
 
