Corrected PR update typos

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -367,7 +367,7 @@ Monde PR’s achievements for May:
 
 News coverage secured by Monde PR:
 - An article in [Brave New Coin](https://bravenewcoin.com/insights/crypto-market-forecast-week-of-may-3rd-2021) featuring news about the decentralized treasury activation. 
-- An article in [Coindesk](https://www.coindesk.com/bitcoiners-future-consensus-2018-2021) featuring commentary by @lukebp_ about experience at Consensum. The piece was syndicated to [Yahoo! Finance](https://finance.yahoo.com/news/8-400-bitcoiners-went-hilton-200356039.html). 
+- An article in [CoinDesk](https://www.coindesk.com/bitcoiners-future-consensus-2018-2021) featuring commentary by @lukebp_ about his experience at Consensus. The piece was syndicated to [Yahoo! Finance](https://finance.yahoo.com/news/8-400-bitcoiners-went-hilton-200356039.html). 
 - The DCRDEX integration announcement was covered by [Bankless Times](https://www.banklesstimes.com/2021/05/27/decred-announces-initial-dcrdex-integration-into-decrediton-wallet/) and [Crowdfund Insider](https://www.crowdfundinsider.com/2021/05/175918-digital-currency-project-decred-announces-initial-integration-of-its-decentralized-exchange-into-decrediton-wallet/). The Crowdfund Insider article was syndicated to [Crypto News BTC](https://cryptonewsbtc.org/2021/05/28/digital-currency-project-decred-announces-initial-integration-of-its-decentralized-exchange-into-decrediton-wallet/), [MCC Exchange](https://mcc.exchange/2021/05/27/digital-currency-project-decred-announces-initial-integration-of-its-decentralized-exchange-into-decrediton-wallet/) and [MoneyNow](https://moneynow.cc/decreds-virtual-currency-allocation-announces-initial-integration-of-its-decentralized-wallet-into-decrediton-wallet/). The announcement was also covered by [CryptoNEXA](https://www.cryptonexa.com/2021/06/02/decred-and-zcash-lead-the-weekly-top/), [CriptoNoticias](https://www.criptonoticias.com/mercados/decred-zcash-lideran-top-semanal-mercado-halla-plena-recuperacion/) and [Crypto News](https://cryptonews.com/news/polygon-enjin-decred-uniswap-and-horizen-led-the-market-last-10514.htm). The Crypto News article was syndicated to [IQ Stock Market](https://www.iqstockmarket.com/n/polygon-enjin-decred-uniswap-horizen-led-market-last-week-2325136/).  
 
 ## Events
