add rel ext story

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -466,6 +466,10 @@ After Elon Musk criticized Bitcoin's environmental characteristics and Tesla [st
 
 Ark's Cathie Wood also [remarked](https://www.coindesk.com/ark-cathie-wood-crash-esg-movement) at Consensus that ESG (Environmental Social and Governance) concerns with Bitcoin meant “A lot of institutional buying went on pause”, crediting Elon Musk with a role in this movement.
 
+The PoolTogether DAO, associated with the Pool Together lottery and controlling over 50% of all POOL tokens, has [voted](https://snapshot.org/#/poolpool.pooltogether.eth/proposal/QmfDcwyhMyhiTmszt8EX1a2vGfJzAN5TcXGMUwm7W7G7rq) to [diversify](https://gov.pooltogether.com/t/ptip-11-treasury-diversification/963) the holdings by selling 5.38% of all POOL tokens, currently controlled by the DAO, to a selection of VCs for the agreed sum of 7 million USDC. The POOL tokens bought by the VCs will have a lock-up period of 1 year, vesting over a 1 year period following that. 
+
+This is part of an apparent recent [trend](https://www.coindesk.com/synthetix-baderdao-sushiswap-lido-dao-treasuries) for DAOs to diversify their holdings.
+
 May's big Ethereum flash loan fail victim was xToken, where an attacker [exploited](https://www.theblockcrypto.com/post/104667/defi-protocol-xtoken-exploit-attack) bugs in two different contracts within the same transaction, netting a profit of $24.5 million after paying a $21,900 transaction fee to obtain the flash loan.
 
 Binance Smart Chain is now providing [competition](https://www.crowdfundinsider.com/2021/05/175611-defi-hack-analysis-project-pancakebunny-attacked-via-major-200-million-flash-loan-vulnerability/) for Ethereum in the DeFi dumpster fire stakes, after BUNNY tokens were hit for a notional $200 million in misprinted tokens following an economic exploit with, you guessed it, flash loans.
