Dev feedback from davecgh, jholdstock, lukebp

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -52,7 +52,7 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-- moved code for handling [signing](https://github.com/decred/dcrd/pull/2642) standard scripts to its own subpackage, in order to prepare for future splitting of standard script handling from consensus critical code
+- moved code for handling [signing](https://github.com/decred/dcrd/pull/2642) standard scripts to its own subpackage in order to prepare for future splitting of standard script handling from consensus critical code
 - updated OpenBSD [rc script](https://github.com/decred/dcrd/pull/2646) for 6.9 features
 - reworked application [version](https://github.com/decred/dcrd/pull/2651) handling to parse it from a single string, which is easier to manage and is more error-proof
 - perform a graceful shutdown when the [SIGHUP](https://github.com/decred/dcrd/pull/2645) signal is received
@@ -140,7 +140,7 @@ Progress towards v1.1.0 can now be tracked on the [Milestones](https://github.co
 - improved logging when [recovering](https://github.com/decred/vspd/pull/255) from request handling failures
 - added [config](https://github.com/decred/vspd/pull/249) params for max log size and max log files to keep
 - [remove](https://github.com/decred/vspd/pull/260) confirmed fee transactions from the database, cutting disk usage [by ~2x](https://github.com/decred/vspd/pull/243#issuecomment-844945549)
-- store each ticket in its own [DB bucket](https://github.com/decred/vspd/pull/243). Combined with the previous optimization, it allows to trade ~40% higher disk usage for ~50% faster insertion and ~85% faster counting of tickets.
+- store each ticket in its own [DB bucket](https://github.com/decred/vspd/pull/243). Combined with the previous optimization, it allows to trade ~40% higher disk usage for ~50% faster insertion and ~85% faster iterating over tickets.
 
 <a id="dcrstakepool" />
 
@@ -498,6 +498,6 @@ Most information from third parties is relayed directly from source after a mini
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: {}
+- reviews and feedback: davecgh, jholdstock, lukebp
 - title image: {}
 - funding: Decred stakeholders
