--- a/journal/202105.md
+++ b/journal/202105.md
@@ -219,15 +219,13 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) shared li
 - implemented the [Max](https://github.com/planetdecred/godcr/pull/396) button for setting the maximum DCR amount that can be sent
 - added the submission of input fields with pressing [Enter](https://github.com/planetdecred/godcr/pull/414)
 - added [loading](https://github.com/planetdecred/godcr/pull/400) animations to certain modals
-- initial [dark mode](https://github.com/planetdecred/godcr/pull/401) suppot
+- initial [dark mode](https://github.com/planetdecred/godcr/pull/401) support
 - added language translation infrastructure
 - ~9 bug fixes
 
-Elias Naur (creator of the Gio library that powers GoDCR) has kindly reviewed the UI code and shared his [recommendations](https://paste.sr.ht/~eliasnaur/cea1d29d6a5f96668b5e166c2f39ef596974574f), many of which have already been implemented. { can we link this publicly? }
+Elias Naur (creator of the Gio library that powers godcr) has kindly reviewed the UI code and shared his [recommendations](https://paste.sr.ht/~eliasnaur/cea1d29d6a5f96668b5e166c2f39ef596974574f). Issues were created to address them, and some are already completed (e.g. [#409](https://github.com/planetdecred/godcr/issues/409), [#411](https://github.com/planetdecred/godcr/issues/411), [#416](https://github.com/planetdecred/godcr/issues/416)).
 
-{ what is the "product name" for use in texts, "godcr" or "GoDCR"? }
-
-{ maybe GoDCR shot, 768px wide if possible }
+{ add godcr UI shot, 768px wide if possible }
 
 <a id="dcrdata" />
 
@@ -498,6 +496,6 @@ Most information from third parties is relayed directly from source after a mini
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: davecgh, jholdstock, lukebp
+- reviews and feedback: davecgh, jholdstock, lukebp, oshorefueled
 - title image: {}
 - funding: Decred stakeholders
