--- a/journal/202105.md
+++ b/journal/202105.md
@@ -156,6 +156,8 @@ Progress towards v1.1.0 can now be tracked on the [Milestones](https://github.co
 - handle `SIGTERM` and `SIGHUP` shutdown [signals](https://github.com/decred/dcrpool/pull/327)
 - fixed chain notifications getting [blocked](https://github.com/decred/dcrpool/pull/324) by payment processing and added a workaround for dcrwallet's [reorg handling](https://github.com/decred/dcrwallet/issues/1740) bug
 
+Third release [candidate](https://github.com/decred/dcrpool/releases/tag/v1.2.0-rc3) for v1.2.0 fixed issues discovered since RC2, but coinbase confirmation failures remain unresolved. The release is postponed till further notice while the team is exploring solutions.
+
 <a id="dcrdex" />
 
 **[DCRDEX](https://github.com/decred/dcrdex)**
@@ -496,6 +498,6 @@ Most information from third parties is relayed directly from source after a mini
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: davecgh, jholdstock, lukebp, oshorefueled
+- reviews and feedback: davecgh, dnldd, jholdstock, lukebp, oshorefueled
 - title image: {}
 - funding: Decred stakeholders
