Dev godcr tweaks

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -220,10 +220,10 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) shared li
 - implemented pages: [Tickets](https://github.com/planetdecred/godcr/pull/395) overview, [Tickets list](https://github.com/planetdecred/godcr/pull/406), and [Restore wallet](https://github.com/planetdecred/godcr/pull/386)
 - implemented the [Max](https://github.com/planetdecred/godcr/pull/396) button for setting the maximum DCR amount that can be sent
 - added the submission of input fields with pressing [Enter](https://github.com/planetdecred/godcr/pull/414)
-- added [loading](https://github.com/planetdecred/godcr/pull/400) animations to certain modals
+- added [loading](https://github.com/planetdecred/godcr/pull/400) animations to some modals
 - initial [dark mode](https://github.com/planetdecred/godcr/pull/401) support
-- added language translation infrastructure
-- ~9 bug fixes
+- added language [translation](https://github.com/planetdecred/godcr/pull/426) infrastructure
+- ~14 bug fixes
 
 Elias Naur (creator of the Gio library that powers godcr) has kindly reviewed the UI code and shared his [recommendations](https://paste.sr.ht/~eliasnaur/cea1d29d6a5f96668b5e166c2f39ef596974574f). Issues were created to address them, and some are already completed (e.g. [#409](https://github.com/planetdecred/godcr/issues/409), [#411](https://github.com/planetdecred/godcr/issues/411), [#416](https://github.com/planetdecred/godcr/issues/416)).
 
