--- a/journal/202105.md
+++ b/journal/202105.md
@@ -42,7 +42,11 @@ https://github.com/decred/decred-binaries/releases/tag/v1.6.3
 
 { put this in Gov or have a separate ANN section? }
 
-{ test tspend }
+{ test tspend done }
+
+{ prepare for real tspends! }
+
+{ is it only for solo? }
 
 ## Development
 
@@ -257,6 +261,7 @@ Elias Naur (creator of the Gio library that powers godcr) has kindly reviewed th
 
 Other:
 
+- Bug Bounty Program [update](https://bounty.decred.org/2021/05/status-update/): a total of 180 submissions processed so far, with 16 of them being eligible for a payout
 - translations require continuous maintenance. Join the [#translations](https://chat.decred.org/#/room/#translations:decred.org) chat room to coordinate with the other translators and developers.
 
 ## People
