Gov reword treasury para

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -292,7 +292,7 @@ All-time community growth charts have been tweaked, updated, and moved to a new 
 
 { we need to revise how we report to cover both legacy and new Treasury. maybe just sum them for a start? }
 
-In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 11,342 DCR (2,564 to the old address, and 8,778 to the new system) and spent 698 DCR from the legacy address (on Jun 2). Using May's average of $173.47, this is $1.97M received and $121K spent. At April's average rate of $198.60, the USD billed for past work is $139K. As of Jun 3, combined Treasury balance is 683,438 DCR (107 million USD at $156).
+In May Decred Treasury received 11,342 DCR (2,564 to the [old address](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx), and 8,778 to the [new system](https://explorer.dcrdata.org/treasury)) worth $1.97M at May's average rate of $173.47. No DCR was spent in May. On Jun 2, 698 DCR was spent from the legacy address for April invoices, worth $121K at May's rate, or $139K at April's billing rate of $198.60. As of Jun 3, combined Treasury balance is 683,438 DCR (107 million USD at $156).
 
 May saw 1 proposal submitted and approved, the proposal for continued development of Politeia (detailed last month) had 98.4% approval and turnout of 44%.
 
