Gov extend tspend test para

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -296,7 +296,7 @@ In May Decred Treasury received 11,342 DCR (2,564 to the [old address](https://e
 
 May saw 1 proposal submitted and approved, the proposal for continued development of Politeia (detailed last month) had 98.4% approval and turnout of 44%.
 
-The first test of the new Tspend Treasury [transactions](https://explorer.dcrdata.org/tx/7507bcc72bfde895065034e12e6d462f2360163cd0c879f0db35514f9456b2c1), as enabled by DCP0006, was [drafted](https://twitter.com/behindtext/status/1392505872119705609) on May 12, and on May 22 was included in block 556,416 after having accumulated 6,755 Yes votes, and 1 No vote. 
+Decred's new Treasury system was successfully tested on mainnet. On May 10 the stakeholders were [notified](https://twitter.com/decredproject/status/1391877816292151296) to configure trust for the Politeia key \#1 in their voting wallets. Then, on May 12, a small test TSPEND [transaction](https://explorer.dcrdata.org/tx/7507bcc72bfde895065034e12e6d462f2360163cd0c879f0db35514f9456b2c1) was broadcast to the network. The nearest voting window was May 13-24 (12 days), but after having accumulated 6,755 Yes and 1 No vote over 9 days, the vote "short-circuited" and the tx was mined on May 22 in block [556,416](https://explorer.dcrdata.org/block/000000000000000000b8bed4b8511e3c5197d3eee6372db2ba199481e14d5376). This process is specified in [Decred Change Proposal 0006](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki).
 
 { check https://github.com/decredcommunity/proposals/commits/master for updates }
 
