--- a/journal/202105.md
+++ b/journal/202105.md
@@ -290,17 +290,11 @@ All-time community growth charts have been tweaked, updated, and moved to a new 
 
 ## Governance
 
-{ we need to revise how we report to cover both legacy and new Treasury. maybe just sum them for a start? }
-
 In May Decred Treasury received 11,342 DCR (2,564 to the [old address](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx), and 8,778 to the [new system](https://explorer.dcrdata.org/treasury)) worth $1.97M at May's average rate of $173.47. No DCR was spent in May. On Jun 2, 698 DCR was spent from the legacy address for April invoices, worth $121K at May's rate, or $139K at April's billing rate of $198.60. As of Jun 3, combined Treasury balance is 683,438 DCR (107 million USD at $156).
 
-May saw 1 proposal submitted and approved, the proposal for continued development of Politeia (detailed last month) had 98.4% approval and turnout of 44%.
+May saw 1 proposal submitted and approved, the proposal for continued development of Politeia (detailed [last month](202104.md)) had 98.4% approval and turnout of 44%.
 
 Decred's new Treasury system was successfully tested on mainnet. On May 10 the stakeholders were [notified](https://twitter.com/decredproject/status/1391877816292151296) to configure trust for the Politeia key \#1 in their voting wallets. Then, on May 12, a small test TSPEND [transaction](https://explorer.dcrdata.org/tx/7507bcc72bfde895065034e12e6d462f2360163cd0c879f0db35514f9456b2c1) was broadcast to the network. The nearest voting window was May 13-24 (12 days), but after having accumulated 6,755 Yes and 1 No vote over 9 days, the vote "short-circuited" and the tx was mined on May 22 in block [556,416](https://explorer.dcrdata.org/block/000000000000000000b8bed4b8511e3c5197d3eee6372db2ba199481e14d5376). This process is specified in [Decred Change Proposal 0006](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki).
-
-{ check https://github.com/decredcommunity/proposals/commits/master for updates }
-
-See Politeia Digest [issue 42](https://blockcommons.red/politeia-digest/issue042/) for more details on the month's proposal.
 
 ## Network
 
