--- a/journal/202105.md
+++ b/journal/202105.md
@@ -302,15 +302,15 @@ Decred's new Treasury system was successfully tested on mainnet. On May 10 the s
 
 { section hint: use the same `zoom` parameter for all dcrdata links }
 
-**Hashrate**: May's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) opened at ~418.2 Ph/s and closed ~351.7 Ph/s, bottoming at 233.8 Ph/s and peaking at 497.3 Ph/s throughout the month.
+**Hashrate**: May's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) opened at ~418 Ph/s and closed ~351 Ph/s, bottoming at 234 Ph/s and peaking at 497 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jun 1: Poolin 38.75%, F2Pool 16.5%, Antpool 3.28%, BTC.com 1.56%, Luxor 1.29%, Huobipool 0.36%, UUPool 0.097%, Coinmine 0.0448%, okex 0.009%, Other 38%.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jun 1: Poolin 39%, F2Pool 17%, Antpool 3%, BTC.com 1.6%, Luxor 1.3%, Huobipool 0.4%, UUPool 0.1%, Coinmine 0.05%, okex 0.01%, others 38%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before {date}: {PoolName n%, ...}.
 
-**Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=ko2vefoc-kpf16yhd&bin=window&axis=time&visibility=true-true) varied between 173.3-198.1 DCR, with 30-day [average](https://dcrstats.com/) at 183.66 DCR (-2.14).
+**Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=ko2vefoc-kpf16yhd&axis=time&visibility=true-true&mode=stepped) varied between 173-198 DCR, with 30-day [average](https://dcrstats.com/) at 183.7 DCR (-2.1).
 
 The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) was 7.39-7.62 million DCR, meaning that 57.2-58.7% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) in proof-of-stake.
 
@@ -320,7 +320,7 @@ The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&
 
 **Nodes**: Throughout May there were around 215 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
-Node versions as of June 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (252 total, dcrd only): v1.6.2 - 42%, v1.6.0 - 21%, v1.6.1 - 17.4%, v1.7 dev builds - 7.9%, v1.6 dev builds 4.36%, v1.5.2 - 3.1%, v1.5.1 - 2.7%, v1.5.0 - .8%.
+Node versions as of Jun 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (252 total, dcrd only): v1.6.2 - 42%, v1.6.0 - 21%, v1.6.1 - 17%, v1.7 dev builds - 8%, v1.6 dev builds 4%, v1.5.2 - 3%, v1.5.1 - 2.7%, v1.5.0 - 0.8%.
 
 { maybe } The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://explorer.dcrdata.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
 
