Net add analysis for hashrate and vsp

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -304,11 +304,13 @@ Decred's new Treasury system was successfully tested on mainnet. On May 10 the s
 
 **Hashrate**: May's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) opened at ~418 Ph/s and closed ~351 Ph/s, bottoming at 234 Ph/s and peaking at 497 Ph/s throughout the month.
 
+There appears to be a correlation between the market price rally from ~25 to ~200 USD and the hashrate going from ~350 to 450-550 Ph/s in December-April. It can be observed in the other direction too. First, price correction during Apr 17-23 happened with the hashrate dropping from ~450 to ~250 Ph/s. And then the May 10-23 hashrate decline correlated with the market correction from ~200 to ~110 [USDT](https://global.bittrex.com/Market/Index?MarketName=USDT-DCR).
+
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jun 1: Poolin 39%, F2Pool 17%, Antpool 3%, BTC.com 1.6%, Luxor 1.3%, Huobipool 0.4%, UUPool 0.1%, Coinmine 0.05%, okex 0.01%, others 38%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before {date}: {PoolName n%, ...}.
+Distribution of 1,000 actually [mined blocks](https://miningpoolstats.stream/decred) almost matches the reported hashrate. Unidentified mined blocks are split between 4 addresses: [Dsacz](https://explorer.dcrdata.org/address/DsaczRtjC31N6XVV69qcBoyR2BEEmjRDay3) 25%, [DsR4G](https://explorer.dcrdata.org/address/DsR4GSVsMxShvk6dpod9DBTbX7DuZhE2jjs) 7%, [DsbNN](https://explorer.dcrdata.org/address/DsbNNnupnCWd9MrHycs1NvwrtfhSYKF6ZGB) 4%, and [DsaWD](https://explorer.dcrdata.org/address/DsaWDBxVjxtV1ugqXsV3PGmAD4jLwryvSX3) 0.2%.
 
 **Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=ko2vefoc-kpf16yhd&axis=time&visibility=true-true&mode=stepped) varied between 173-198 DCR, with 30-day [average](https://dcrstats.com/) at 183.7 DCR (-2.1).
 
@@ -316,7 +318,7 @@ The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&
 
 { recap of ticket price action if it was interesting }
 
-**VSP**: On Jun 1, 8.2K (+1.1K) live tickets were managed by vspd servers and 1K (-1.2K) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the 12 legacy and 13 new VSPs managed 22.5% of the ticket pool.
+**VSP**: On Jun 1, 8.2K (+1.1K) live tickets were managed by vspd servers and 1.1K (-1.1K) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the 12 legacy and 13 new VSPs managed 22.5% of the ticket pool. The 4 recently delisted but still active legacy VSPs managed 61 live ticket on Jun 1. Status of the 77 tickets held by [stakepool.dcrstats.com](https://stakepool.dcrstats.com) is unknown after it stopped reporting on May 16.
 
 **Nodes**: Throughout May there were around 215 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
