--- a/journal/202105.md
+++ b/journal/202105.md
@@ -312,7 +312,9 @@ Distribution of 1,000 actually [mined blocks](https://miningpoolstats.stream/dec
 
 The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) was 7.39-7.62 million DCR, meaning that 57.2-58.7% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-**VSP**: On Jun 1, 8.2K (+1.1K) live tickets were managed by vspd servers and 1.1K (-1.1K) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the 12 legacy and 13 new VSPs managed 22.5% of the ticket pool. The 4 recently delisted but still active legacy VSPs managed 61 live tickets. The status of 77 live tickets held by [stakepool.dcrstats.com](https://stakepool.dcrstats.com) is unknown since it stopped reporting on May 16.
+**VSP**: On Jun 1, 8.2K (+1.1K) live tickets were managed by vspd servers and 1.1K (-1.1K) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the 12 legacy and 13 new VSPs managed 22.5% of the ticket pool. The 4 recently delisted but still active legacy VSPs managed 61 live tickets.
+
+On May 14 it was [discovered](https://github.com/decred/dcrwebapi/issues/138) that 4 legacy VSPs have not upgraded to support the new consensus rules and got forked off the network on May 8, while holding ~350 tickets of their clients. The biggest ones [stakepool.eu](https://stakepool.eu/) and [stakey.com](https://stakey.com/) have eventually upgraded to continue serving their tickets, while [stakepool.dcrstats.com](https://stakepool.dcrstats.com) changed to maintenance mode and stopped reporting the stats. The status of its 77 live tickets is unknown as of Jun 5.
 
 **Nodes**: Throughout May there were around 215 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
@@ -320,29 +322,33 @@ Node versions as of Jun 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (2
 
 ## Ecosystem
 
-{ hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best }
+Welcome the new [vspd](https://github.com/decred/vspd) instance [123.dcr.rocks](https://123.dcr.rocks/) from [@thefrankbraun](https://twitter.com/thefrankbraun). Service fee is 0.49% and voting wallets are [located](https://twitter.com/thefrankbraun/status/1389014142095437825) in 3 data centers on 2 continents. Since it was listed on May 1, the service has already voted 370+ tickets and manages ~570 live tickets as of Jun 5.
 
-{ check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
+Legacy VSP [dcrpool.dittrex.com](https://dcrpool.dittrex.com) was [removed](https://github.com/decred/dcrwebapi/pull/140) from the [listing](https://decred.org/vsp/) but is still online watching its last 1 live ticket. The service has voted 800+ tickets since [Nov 2018](https://github.com/decred/dcrwebapi/pull/48). The replacement vspd instance from Dittrex is up, [waiting](https://github.com/decred/dcrwebapi/pull/133) its first voted ticket to get added to the list.
 
-123.dcr.rocks { may-1 merged, may-3 announced https://twitter.com/thefrankbraun/status/1389014142095437825 }
+Not all exchanges handled Decred's 6th consensus upgrade smoothly:
 
-{ check https://github.com/decred/dcrweb/commits/master to detect added/removed services }
+- Binance has upgraded in advance and was not affected by the fork when it happened
+- Bittrex got stuck at block [552,447](https://explorer.dcrdata.org/block/552447) - last block adhering to the old consensus rules. Their [status page](https://global.bittrex.com/Status) reported that DCR wallet is disabled and under "Wallet Maintenance", which changed to "Normal" on around May 13.
+- Poloniex [tweeted](https://twitter.com/PoloSupport/status/1390916088397852675) that their DCR wallet has been disabled for "maintenance" (~4 hours after the consensus upgrade), and [tweeted](https://twitter.com/PoloSupport/status/1395727656251973639) again on May 21 that it was re-enabled
 
-How exchanges handled Decred's 6th consensus upgrade on May 8:
-
-- Binance had no issues { someone please confirm }
-- Bittrex got stuck at block [552447](https://explorer.dcrdata.org/block/552447) - by coincidence, it is the last block on the old consensus rules. Their [status page](https://global.bittrex.com/Status) reported that DCR wallet is disabled and under "Wallet Maintenance" until at least May 13 { update the finish date }.
-- Poloniex [tweeted](https://twitter.com/PoloSupport/status/1390916088397852675) that their DCR wallet has been disabled for "maintenance" that lasted until at least May 13 { update the finish date }.
-- { did DCRDEX have any downtime? :D }
-- { any info on other exchanges? }
-
-https://twitter.com/Ledger_Support/status/1397200842722365452, uptime https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$UuamZBaUjn4Iyr9meCiO6ONHwL0yEm9PPl1JDGNEfwY
+Since around May 17 Ledger Live users have been reporting issues with syncing and sending their DCR. Last update on Ledger's [incident page](https://status.ledger.com/incidents/j1sypv88pgs6) says the fix was being tested on May 20, but their Jun 3 [tweet](https://twitter.com/Ledger_Support/status/1400429510827388929) confirms the issue is still unresolved. As of Jun 5, the [status page](https://status.ledger.com/) reports an outage for DCR and a 78.3% uptime over the past 90 days.
 
 { scan #services }
+
+The following services have been [delisted](https://github.com/decred/dcrweb/pull/957) from [decred.org](https://decred.org/exchanges/):
+
+- [instaex.io](https://instaex.io/) - website is down
+- [fexpro.net](https://fexpro.net/) - certificate errors
+- [changenow.io](https://changenow.io) - DCR trading pair [unavailable](https://github.com/decred/dcrweb/pull/988) for 3+ months
+- [transak.com](https://global.transak.com/) - [no longer](https://github.com/decred/dcrweb/issues/984) seems to support buying DCR
+- 6 OTC desks [removed](https://github.com/decred/dcrweb/issues/983) as none of them were actively quoting DCR
 
 [MarketplaceGOLD](https://marketplacegold.com/) has compiled a list of merchants [accepting DCR](https://marketplacegold.com/crypto/186-decred-dcr) globally. { https://www.reddit.com/r/decred/comments/nbcvob/where_decred_dcr_is_accepted_locally_and_globally/ - maybe add the link if it has an interesting convo }
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
+
+Join our [#services](https://chat.decred.org/#/room/#services:decred.org) chat to follow Decred ecosystem updates.
 
 ## Outreach
 
