--- a/journal/202105.md
+++ b/journal/202105.md
@@ -334,8 +334,6 @@ Not all exchanges handled Decred's 6th consensus upgrade smoothly:
 
 Since around May 17 Ledger Live users have been reporting issues with syncing and sending their DCR. Last update on Ledger's [incident page](https://status.ledger.com/incidents/j1sypv88pgs6) says the fix was being tested on May 20, but their Jun 3 [tweet](https://twitter.com/Ledger_Support/status/1400429510827388929) confirms the issue is still unresolved. As of Jun 5, the [status page](https://status.ledger.com/) reports an outage for DCR and a 78.3% uptime over the past 90 days.
 
-{ scan #services }
-
 The following services have been [delisted](https://github.com/decred/dcrweb/pull/957) from [decred.org](https://decred.org/exchanges/):
 
 - [instaex.io](https://instaex.io/) - website is down
@@ -344,7 +342,7 @@ The following services have been [delisted](https://github.com/decred/dcrweb/pul
 - [transak.com](https://global.transak.com/) - [no longer](https://github.com/decred/dcrweb/issues/984) seems to support buying DCR
 - 6 OTC desks [removed](https://github.com/decred/dcrweb/issues/983) as none of them were actively quoting DCR
 
-[MarketplaceGOLD](https://marketplacegold.com/) has compiled a list of merchants [accepting DCR](https://marketplacegold.com/crypto/186-decred-dcr) globally. { https://www.reddit.com/r/decred/comments/nbcvob/where_decred_dcr_is_accepted_locally_and_globally/ - maybe add the link if it has an interesting convo }
+[MarketplaceGOLD](https://marketplacegold.com/) has compiled a list of merchants [accepting DCR](https://marketplacegold.com/crypto/186-decred-dcr) globally and [announced](https://www.reddit.com/r/decred/comments/nbcvob/where_decred_dcr_is_accepted_locally_and_globally/) it on r/decred.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
