add from twitter scan

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -36,6 +36,8 @@ https://github.com/decred/decred-binaries/releases/tag/v1.6.3
 
 { windows users installed before May 25 please download and install again because the bin was replaced }
 
+{ dex confusion points: non spv and btc full node }
+
 { verify bins }
 
 ## New Treasury Activated
@@ -48,7 +50,9 @@ https://github.com/decred/decred-binaries/releases/tag/v1.6.3
 
 { prepare for real tspends! }
 
-{ is it only for solo? }
+{ clarify it is for solo voters only for now }
+
+https://twitter.com/matheusd_tech/status/1390981711736053760
 
 ## Development
 
@@ -294,6 +298,8 @@ All-time community growth charts have been tweaked, updated, and moved to a new 
 
 In May Decred Treasury received 11,342 DCR (2,564 to the [old address](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx), and 8,778 to the [new system](https://explorer.dcrdata.org/treasury)) worth $1.97M at May's average rate of $173.47. No DCR was spent in May. On Jun 2, 698 DCR was spent from the legacy address for April invoices, worth $121K at May's rate, or $139K at April's billing rate of $198.60. As of Jun 3, combined Treasury balance is 683,438 DCR (107 million USD at $156).
 
+Treasury metrics https://twitter.com/_Checkmatey_/status/1392266971228430338
+
 May saw 1 proposal submitted and approved, the proposal for continued development of Politeia (detailed [last month](202104.md)) had 98.4% approval and turnout of 44%.
 
 Decred's new Treasury system was successfully tested on mainnet. On May 10 the stakeholders were [notified](https://twitter.com/decredproject/status/1391877816292151296) to configure trust for the Politeia key \#1 in their voting wallets. Then, on May 12, a small test TSPEND [transaction](https://explorer.dcrdata.org/tx/7507bcc72bfde895065034e12e6d462f2360163cd0c879f0db35514f9456b2c1) was broadcast to the network. The nearest voting window was May 13-24 (12 days), but after having accumulated 6,755 Yes and 1 No vote over 9 days, the vote "short-circuited" and the tx was mined on May 22 in block [556,416](https://explorer.dcrdata.org/block/000000000000000000b8bed4b8511e3c5197d3eee6372db2ba199481e14d5376). This process is specified in [Decred Change Proposal 0006](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki).
@@ -390,7 +396,8 @@ Selected articles:
 
 Videos:
 
-- {}
+- news update May 12 by @Exitus https://www.youtube.com/watch?v=S_asvjm4lFI
+- Talking Decred with Jake Yocom-Piatt https://www.youtube.com/watch?v=ZCfIM8IHurU { "irk some" quote! }
 
 Audio:
 
@@ -398,15 +405,23 @@ Audio:
 
 Art/fun:
 
-- {}
+- Lego Stakey! https://twitter.com/Talha_Habib/status/1398268623572111362
+- @jz has been busy with the [#RealDecredMemes](https://twitter.com/hashtag/RealDecredMemes) hashtag:
+  - DCR marrow chart/menu https://twitter.com/jz_bz/status/1391442849808408580
+  - freedom eagle https://twitter.com/jz_bz/status/1392177374008053760
+  - levels of voter enlightenment https://twitter.com/jz_bz/status/1395560884433473537
+  - shower thoughts https://twitter.com/jz_bz/status/1396211915098136578
 
 Translations:
 
-- {}
+- Decred Journal April 2021 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4) and Chinese (@Dominic). Thank you all!
 
 Other non-English content:
 
 - https://www.criptonoticias.com/comunidad/protocolo-decred-esta-5-dias-descentralizar-tesoreria/
+- is this a new podcast series? https://twitter.com/wanbihou/status/1383625001098649602
+
+{ I think Lego Stakey pic is due }
 
 ## Discussions
 
@@ -422,7 +437,8 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- {}
+- https://twitter.com/lukebp_/status/1388987670832074758
+- a long debate between @lukebp and @BuckPerley on formal vs informal governance https://twitter.com/lukebp_/status/1391747751105507331
 
 ## Markets
 
@@ -430,9 +446,9 @@ In May DCR was trading between USD 90.4-229.4 / BTC 0.0027-0.0047. The average d
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
-{ dcrdex updates, esp. volume }
+checkonchain.com new metrics https://twitter.com/_Checkmatey_/status/1392266957823508486
 
-https://twitter.com/lukebp_/status/1391747751105507331
+{ dcrdex updates, esp. volume }
 
 ## Relevant External
 
